--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,26 +1,3 @@
-FROM golang:alpine as builder
+FROM redis:alpine
 
-RUN mkdir /builder
-
-ADD . /build/
-
-WORKDIR /build
-
-RUN go build -o main .
-
-#stage 2
-FROM apline
-
-RUN adduser -S -D -H -h /app appuser
-
-USER appuser
-
-COPY . /app
-
-COPY --from=builder /build/main /app/
-
-WORKDIR /app
-
-EXPOSE 3000
-
-CMD ["./main"]
+EXPOSE 6379
