--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 version: '3'
 
 services:
-  api:
-    build: api
+  app:
+    build: .
     ports:
       - "3000:3000"
-    depends_on:
-      - db
-
-  db:
-    build: db
-    ports:
-      - "6379:6379"
-    
-    volumes:
-      - .data:/data
+    environment:
+      - PORT=3000
+      - DOMAIN=localhost:3000
+      - DB_ADDR=${DB_ADDR:-redis-host.example.com}
+      - DB_PORT=${DB_PORT:-6379}
+      - DB_PASS=${DB_PASS:-password_placeholder}
+      - DB_USER=${DB_USER:-default}
+    restart: unless-stopped
