env changes to tackle backend crash

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,13 @@
 # Environment Variables Template
 # Copy this file to .env and update with your actual values
 
-# Domain Configuration
+# Application Configuration
 DOMAIN=ynit.com
 PORT=3000
+
+# Frontend Configuration
+FRONTEND_PORT=3001
+REACT_APP_API_URL=http://localhost:3000
 
 # Redis Configuration
 DB_ADDR=your-redis-host
